# stepv6

./: .gitignore  CMakeLists.txt  CMakePresets.json
pluginstep/: .gitignore  CMakeLists.txt  pluginstep.pro  st_abstractvisitorgrid4d.cpp  st_abstractvisitorgrid4d.h  st_beam4d.cpp  st_beam4d.h  st_grid4dwootraversalalgorithm.cpp  st_grid4dwootraversalalgorithm.h  st_grid4dwootraversalalgorithm.hpp  st_houghspace.cpp  st_houghspace.h  st_houghspace.hpp  st_openactivecontours.cpp  st_openactivecontours.h  st_openactivecontours.hpp  st_pluginentry.cpp  st_pluginentry.h  st_standardhoughspacedrawmanager.h  st_standardhoughspacedrawmanager.hpp  st_steppluginmanager.cpp  st_steppluginmanager.h  st_visitorgrid4dfastfilter.cpp  st_visitorgrid4dfastfilter.h  st_visitorgrid4dfastfilter.hpp  st_visitorgrid4dincrement.cpp  st_visitorgrid4dincrement.h  st_visitorgrid4dincrement.hpp  st_visitorgrid4dsetvalue.cpp  st_visitorgrid4dsetvalue.h  st_visitorgrid4dsetvalue.hpp
pluginstep/step/: st_create_hough_space.cpp  st_create_hough_space.h  st_step_filter_hough_space.cpp  st_step_filter_hough_space.h  st_step_filter_hough_space_by_value.cpp  st_step_filter_hough_space_by_value.h  st_stepextractcurvesfromhoughspace.cpp  st_stepextractcurvesfromhoughspace.h
